# codex

./: .gitignore  MARKET_ANALYSIS.md  SUMMARY.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/codex-electron/: AUTHENTICATION_EXPLANATION.md  FIX_EXPLANATION.md  README.md  SLASH_COMMANDS_EXPLANATION.md  SYSTEM_MESSAGES_EXPLANATION.md  package-lock.json  package.json  vite.config.ts
apps/codex-electron/electron/: main.js  preload.js
apps/codex-electron/src/: App.tsx  ContextSidebar.tsx  styles.css  types.d.ts
codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/app-server/src/: codex_message_processor.rs  context_handler.rs  lib.rs
codex-rs/context-files/: Cargo.toml
codex-rs/context-files/examples/: demo.rs  persistence_demo.rs  test_docx.rs
codex-rs/context-files/src/: agent.rs  chunker.rs  concept.rs  context_file.rs  entity.rs  error.rs  extraction.rs  generator.rs  index.rs  lib.rs  llm.rs  node.rs  optimizer.rs  pipeline.rs  query.rs  relationship.rs  retrieval.rs  storage.rs  sync.rs  tree.rs  tree_storage.rs
codex-rs/context-files/tests/: agentic_test.rs  integration_test.rs
codex-rs/context-files/tests/fixtures/: Cargo.toml  README.md
codex-rs/context-files/tests/fixtures/cooking-recipes/: chocolate-cake.md  pasta-carbonara.md
codex-rs/context-files/tests/fixtures/docs/: architecture.md
codex-rs/context-files/tests/fixtures/src/: lib.rs
codex-rs/context-files/tests/fixtures/work-notes/: meeting-2024-01.md  project-proposal.md
codex-rs/directory-watcher/: Cargo.toml
codex-rs/directory-watcher/src/: config.rs  error.rs  event.rs  indexer.rs  lib.rs  watcher.rs
codex-rs/embeddings/: Cargo.toml
codex-rs/embeddings/src/: cache.rs  error.rs  index.rs  lib.rs  provider.rs  similarity.rs
codex-rs/retrieval/: Cargo.toml
codex-rs/retrieval/src/: config.rs  engine.rs  error.rs  lib.rs
codex-rs/tool-gen/: Cargo.toml
codex-rs/tool-gen/src/: community.rs  error.rs  executor.rs  generator.rs  lib.rs  registry.rs  spec.rs  storage.rs  tool.rs
