[package]
name = "codex-context-files"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context file system for persistent AI memory in Codex"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time handling
chrono = { workspace = true, features = ["serde"] }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# File system utilities
walkdir.workspace = true

# Regex for pattern matching
regex-lite.workspace = true

# Logging
tracing.workspace = true

# Internal dependencies
codex-embeddings = { path = "../embeddings" }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
