[package]
name = "codex-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified retrieval engine combining context files, embeddings, and directory watching"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time handling
chrono.workspace = true

# Logging
tracing.workspace = true

# Internal dependencies
codex-context-files = { path = "../context-files" }
codex-embeddings = { path = "../embeddings" }
codex-directory-watcher = { path = "../directory-watcher" }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
