[package]
name = "codex-tool-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool generation and community sharing framework for Codex"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time handling
chrono.workspace = true

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Logging
tracing.workspace = true

# Hashing for tool signatures
sha2.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
